[gd_scene load_steps=10 format=3 uid="uid://deuihfhsutpe0"]

[ext_resource type="Script" path="res://match/match.gd" id="1_dvvyw"]
[ext_resource type="FontFile" uid="uid://dy0ca7iescwax" path="res://font/LightNovelPOPv2.otf" id="2_6yjbf"]
[ext_resource type="PackedScene" uid="uid://bpfxbpggywtq0" path="res://match/field.tscn" id="2_yybow"]
[ext_resource type="PackedScene" uid="uid://bpxorm3w4l5i" path="res://match/conflict_effect.tscn" id="5_3o071"]
[ext_resource type="PackedScene" uid="uid://06ja2k1os3h3" path="res://match/player.tscn" id="5_l0ccr"]
[ext_resource type="PackedScene" uid="uid://c4cl0r2jd5frf" path="res://match/playable_player.tscn" id="5_yqfqc"]

[sub_resource type="LabelSettings" id="LabelSettings_0e2o3"]
font_size = 40
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y7hsw"]
font = ExtResource("2_6yjbf")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 10

[sub_resource type="PlaneMesh" id="PlaneMesh_stadv"]
size = Vector2(3.3, 3.3)
center_offset = Vector3(0, -0.01, 0)

[node name="Match" type="Node"]
script = ExtResource("1_dvvyw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MyHP" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -128.0
offset_right = -8.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
text = "HP:20"
label_settings = SubResource("LabelSettings_0e2o3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="RivalHP" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 8.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 128.0
text = "HP:20"
label_settings = SubResource("LabelSettings_0e2o3")
vertical_alignment = 1

[node name="MyName" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -64.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "名前"
label_settings = SubResource("LabelSettings_y7hsw")
horizontal_alignment = 2
vertical_alignment = 1

[node name="RivalName" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 8.0
offset_right = 264.0
offset_bottom = 64.0
text = "名前"
label_settings = SubResource("LabelSettings_y7hsw")
vertical_alignment = 1

[node name="Board" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Board"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.3, 0.25)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Board"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
sky_mode = 1

[node name="Field" parent="Board" node_paths=PackedStringArray("audio_stream_player") instance=ExtResource("2_yybow")]
audio_stream_player = NodePath("../../AudioStreamPlayer")

[node name="Player" parent="Board" node_paths=PackedStringArray("audio_stream_player") instance=ExtResource("5_yqfqc")]
audio_stream_player = NodePath("../../AudioStreamPlayer")

[node name="Rival" parent="Board" node_paths=PackedStringArray("audio_stream_player") instance=ExtResource("5_l0ccr")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
audio_stream_player = NodePath("../../AudioStreamPlayer")

[node name="FieldBack" type="MeshInstance3D" parent="Board"]
mesh = SubResource("PlaneMesh_stadv")

[node name="ConflictEffect" parent="Board" instance=ExtResource("5_3o071")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
visible = false

[node name="ExplosionPower" type="Label3D" parent="Board"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)
visible = false
billboard = 1
double_sided = false
text = "20"
font_size = 120
outline_size = 20

[node name="ExplosionPower2" type="Label3D" parent="Board"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
visible = false
billboard = 1
double_sided = false
text = "20"
font_size = 120
outline_size = 20

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="decided" from="Board/Player" to="." method="_on_player_decided"]
[connection signal="selecting" from="Board/Player" to="." method="_on_player_selecting"]
